@@ -1,14 +1,3 @@
-#include <R.h>
-#include <R_ext/Rdynload.h>
-#include <Rversion.h>
-#if !defined(R_VERSION) || R_VERSION < R_Version(3, 5, 0)
-  #define USE_RINTERNALS
-  #define DATAPTR_RO(x) ((const void *)DATAPTR(x))
-#endif
-#include <Rinternals.h>
-#include <stdlib.h>
-#include <stdint.h>
-#include <stdbool.h>
 #ifdef _OPENMP
   #include<omp.h>
   #define omp_enabled true
@@ -22,6 +11,18 @@
   #define omp_get_thread_num() 0
   #define OMP_PARALLEL_FOR(n)
 #endif
+
+#include <R.h>
+#include <R_ext/Rdynload.h>
+#include <Rversion.h>
+#if !defined(R_VERSION) || R_VERSION < R_Version(3, 5, 0)
+  #define USE_RINTERNALS
+  #define DATAPTR_RO(x) ((const void *)DATAPTR(x))
+#endif
+#include <Rinternals.h>
+#include <stdlib.h>
+#include <stdint.h>
+#include <stdbool.h>
 
 #if !defined SSIZE_MAX
   #define SSIZE_MAX LLONG_MAX
